[project]
name = "bitcoin-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=1.1.2",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-binance>=1.0.32",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ta-lib>=0.6.8",
    "yfinance>=0.2.66",
]

[tool.setuptools.packages.find]
include = ["agents*", "config*", "data_models*", "graph*", "guardrails*", "monitoring*", "prompts*", "tools*"]
exclude = ["data*", "logs*", "examples*", "docs*"]
